--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "axios": "^1.6.2",
+    "luxon": "^3.4.4",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.6",
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
